# serbero

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  config.sample.toml  epa.patch  install.sh
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
prompts/: phase3-classification.md  phase3-escalation-policy.md  phase3-mediation-style.md  phase3-message-templates.md  phase3-system.md
specs/001-dispute-coordination-mvp/: spec.md
specs/002-phased-dispute-coordination/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-guided-mediation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-escalation-execution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.rs  daemon.rs  dispatcher.rs  error.rs  lib.rs  main.rs
src/chat/: dispute_chat_flow.rs  inbound.rs  mod.rs  outbound.rs  shared_key.rs
src/db/: disputes.rs  escalation_dispatches.rs  mediation.rs  mediation_events.rs  migrations.rs  mod.rs  notifications.rs  rationales.rs  state_transitions.rs
src/escalation/: consumer.rs  (+4 more)
tests/: phase1_dedup.rs  phase1_detection.rs  phase1_failure.rs  phase2_assignment.rs  phase2_lifecycle.rs  phase2_renotification.rs  phase3_authority_boundary.rs  phase3_cooperative_summary.rs  phase3_escalation_triggers.rs  phase3_event_driven_start.rs  phase3_external_resolution_report.rs  phase3_followup_reasoning_failure.rs  phase3_followup_round.rs  phase3_followup_summary.rs  phase3_provider_not_yet_implemented.rs  phase3_provider_swap.rs  phase3_response_dedup_restart.rs  phase3_response_ingest.rs  phase3_routing_model.rs  phase3_session_open.rs  phase3_session_open_gating.rs  phase3_stale_message.rs  phase3_summary_escalation.rs  phase3_superseded_by_human.rs  phase3_take_flow_stale_cant_do.rs  phase3_take_reasoning_coupling.rs  phase4_dedup_and_parse_failure.rs  phase4_dispatch.rs  phase4_foundational.rs  phase4_no_write_solvers.rs  phase4_send_failure.rs  phase4_supersession.rs  reasoning_anthropic.rs  reasoning_ppqai.rs
(+47 files in other folders)
