[package]
name = "serbero"
version = "0.1.1"
edition = "2021"
description = "Nostr-native dispute coordination daemon for the Mostro ecosystem"
authors = ["Francisco Calderón <fjcalderon@gmail.com>"]
homepage = "https://mostro.network"
repository = "https://github.com/MostroP2P/serbero"
license = "MIT"
readme = "README.md"

[[bin]]
name = "serbero"
path = "src/main.rs"

[dependencies]
nostr-sdk = { version = "0.44.1", features = ["nip59", "nip44", "nip04"] }
mostro-core = "0.9.1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"

# Phase 3 additions (reasoning provider HTTP, prompt-bundle hashing, session ids).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
nostr-relay-builder = "0.44.0"
httpmock = "0.7"
# `test-util` enables `tokio::time::pause` / `advance` for auth-retry
# loop tests; feature is not in the `full` set so we opt into it on
# the dev side only.
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
